# query-fmt.rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  test.scm
.github/workflows/: build.yml  ci.yml
src/: args.rs  config.rs  file_iterator.rs  format.rs  main.rs  node_item.rs  query_tree.rs
