[package]
name = "query-fmt"
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A formatter for tree-sitter queries"
include = ["src", "tree-sitter-query"]

[[bin]]
name = "query-fmt"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.20.9"

[build-dependencies]
cc="*"
