[package]
name = "query-fmt"
version = "1.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A formatter for tree-sitter queries"
include = ["src", "tree-sitter-query"]

[[bin]]
name = "query-fmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
tree-sitter = "0.20.9"
# toml = "0.7.10"

[build-dependencies]
cc="*"

[target.'cfg(windows)'.dependencies]
zip = "0.5"
winreg = "0.10.1"

[target.'cfg(unix)'.dependencies]
tar = "0.4"
flate2 = "1.0"

[profile.optimized]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
