[package]
name = "query-fmt"
version = "1.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A formatter for tree-sitter queries"
include = ["src", "tree-sitter-query"]
repository = "https://github.com/max397574/query-fmt.rs"
homepage = "https://github.com/max397574/query-fmt.rs"

[[bin]]
name = "query-fmt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
extend = "1.2.0"
tree-sitter = "0.20.10"
tree-sitter-query = "0.1.0"

[target.'cfg(windows)'.dependencies]
zip = "0.5"
winreg = "0.10.1"

[target.'cfg(unix)'.dependencies]
tar = "0.4.39"
flate2 = "1.0.26"

[profile.optimized]
inherits = "release"
opt-level = "z"
strip = true
lto = true
codegen-units = 1
